full invoice creation

--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,10 @@
     "prisma:migrate:status": "prisma migrate status",
     "prisma:studio": "prisma studio",
     "prisma:format": "prisma format",
-    "prisma:pull": "prisma db pull"
+    "prisma:pull": "prisma db pull",
+    "setup:db": "node scripts/setup_database.js",
+    "setup:admin": "node scripts/create_admin_user.js",
+    "copy:data": "node scripts/copy_data_from_exim.js"
   },
   "keywords": [],
   "author": "",
