api code rewrite

--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "puppeteer": "^23.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
